correcting the spacing between sections at major screen adjustment - 600px

--- a/public_html/css/home.less
+++ b/public_html/css/home.less
@@ -542,6 +542,10 @@
             margin-top: 70px;
             margin-bottom: 200px;
             
+            @media screen and (max-width:600px) {
+                margin-bottom: 100px;
+            }
+            
             .w-section {
                 position: relative;
                 width: 29%;
@@ -664,6 +668,9 @@
             position: relative;
             display: inline-block;
             margin-bottom: 200px;
+            @media screen and (max-width:600px) {
+                margin-bottom: 100px;
+            }
             
             .text-block {
                 position: absolute;
